--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -50,6 +50,7 @@ ul {
 }
 
 thead {
+    text-align: left;
     color: white;
     background-color: #20a9e5;
 }
@@ -65,3 +66,26 @@ thead {
 .large-column {
     width: 60%;
 }
+
+footer {
+    color: white;
+    font-weight: bolder;
+}
+
+.footer-image {
+    margin-top: 10px;
+    padding: 10px;
+    height: 150px;
+    width: 180px;
+    background-size: cover;
+    background-position: center;
+}
+
+.footer-image-1 {
+    background-image: url("../img/monitor.jpg");
+}
+
+.footer-image-2 {
+    background-image: url("../img/graph.jpg");
+}
+
