--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@
 }
 
 .header-container {
-    height: 100px;
+    height: 80px;
     background-color: #4ea0ff; 
     background-image: url("../img/pattern.png");
     background-repeat: repeat-x;
@@ -13,7 +13,9 @@
 }
 
 .logo {
-    width: 200px;
+    margin-top: 30px;
+    margin-left: 8px;
+    width: 160px;
 }
 
 .container {
