--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-.header-container {
+header{
     height: 80px;
     background-color: #4ea0ff; 
     background-image: url("../img/pattern.png");
